test/files/neg/error-in-apply-args-4.scala
object O {
  doesntExist(math.floor("not a num 1"), math.floor("not a num 2"))
}
