test/files/neg/error-in-apply-args-4.check
error-in-apply-args-4.scala:2: error: not found: value doesntExist
  doesntExist(math.floor("not a num 1"), math.floor("not a num 2"))
  ^
error-in-apply-args-4.scala:2: error: type mismatch;
 found   : String("not a num 1")
 required: Double
  doesntExist(math.floor("not a num 1"), math.floor("not a num 2"))
                         ^
error-in-apply-args-4.scala:2: error: type mismatch;
 found   : String("not a num 2")
 required: Double
  doesntExist(math.floor("not a num 1"), math.floor("not a num 2"))
                                                    ^
3 errors
